--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
@@ -39,8 +40,7 @@
       "last 1 safari version"
     ]
   },
-    "resolutions": {
-      "styled-components": "^5" 
-    }
+  "resolutions": {
+    "styled-components": "^5"
   }
-
+}
